# ak9753_sparkfun

./: LICENSE.txt  ak9753_sparkfun.py  setup.cfg
src/: AK9753SF.py
src/ak9753sflib/: ak9753.py
