[metadata]
name = ak9753sflib
version = 0.0.1
author = Emilia Connelly / Northern Arizona University IOT
author-email = econnelly@nau.edu, iot@nau.edu
description = Raspberry Pi library for interfacing with the Sparkfun AK9753 Breakout ("Human Presence Sensor")
long-description = file: README.md
long-description-content-type = text/markdown

classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
